# pyqode.core

./: .coveragerc  .gitbugtraq  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  conftest.py  designer.py  designer.pyw  generic_example.py  makeppa.sh  pylintrc  pytest.ini  pyuic.cfg  requirements-dev.txt  run_examples.py  run_generic_editor_example.py  run_generic_example.py  run_python_example .py  run_python_example.py  runtests.py  setup.cfg  setup.py  stdeb.cfg  test.py  tox.ini
.hackedit/: run.json
cmake/: DebSourcePPA.cmake
dev/: new_api_tests.py  workbench.py
doc/: make.bat  make_html.py  readme.rst
doc/source/: advanced.rst  api.rst  api_class_diagram.rst  api_core.rst  api_modes.rst  api_panels.rst  bugs.rst  changelog.rst  conf.py  contribute.rst  credits.rst  download.rst  examples.rst  getting_started.rst  index.rst  license.rst  overview.rst  pyqode.core.api.rst  pyqode.core.backend.rst  pyqode.core.dialogs.rst  pyqode.core.managers.rst  pyqode.core.modes.rst  pyqode.core.panels.rst  pyqode.core.qt.rst  pyqode.core.rst  pyqode.core.styles.rst  pyqode.core.tools.rst  pyqode.core.widgets.rst  pyqode.rst  whats_new.rst
docs/: make_html.py
docs/source/: advanced.rst  api.rst  api_class_diagram.rst  api_core.rst  api_modes.rst  bugs.rst  changelog.rst  conf.py  contribute.rst  credits.rst  download.rst  examples.rst  getting_started.rst  index.rst  license.rst  whats_new.rst
examples/: __init__.py  basic.py  custom.py  generic_example.py  premade.py  python_example.py  refresh_actions.py  refresh_style.py  server.py  simple.py  simple_editor.py  style_and_settings.py  test.py
examples/encodings/: common.py  detect.py  dialog.py  error.py  menu.py  panel.py  readme.md
examples/gui_integration/: __init__.py  generic_example.py  python_editor.py  python_example.py  simple_editor.py
examples/modes/: autoindent.py  caret_line_highlighter_with_syntax_highlighter.py  caret_line_highlighter_without_syntax_highlighter.py  case_converter.py  checker.py  code_completion_backend.py  code_completion_frontend.py  extended_selections.py  filewatcher.py  indenter.py  occurences.py  pygments_syntax_highlighter.py  readme.rst  right_margin.py  smart_backspace.py  symbol_matcher.py  zoom.py
examples/notepad/: MANIFEST.in  freeze_setup.py  notepad.py  pyuic.cfg  readme.rst  setup.iss  setup.py
examples/panels/: checker.py  folding.py  global_checker.py  line_numbers.py  readme.rst  search_and_replace.py  server.py
examples/qt_bindings/: __init__.py  pyqt.py  pyqt4.py  pyside.py
examples/select_qt/: pyqt4.py  pyqt5.py  pyside.py
examples/simple/: basic.py  custom_actions.py  readme.rst  refresh_actions.py  refresh_style.py  server.py  style_and_settings.py
examples/styling/: __init__.py  dump.py  save_load.py
examples/ui/: __init__.py  examples_rc.py  simple_editor.ui  simple_editor_rc.py  simple_editor_ui.py  simple_python_editor.ui  simple_python_editor_ui.py
examples/widgets/: errors_table.py  filesystem_treeview.py  generic_code_edit.py  interactive_console.py  interactive_process.py  output_window.py  splittable_codeedit_tab_widget.py  splittable_tab_widget_example.py  terminal.py
forms/: dlg_preferred_encodings_editor.ui  pnl_encoding.ui  pnl_read_only.ui  popup_open_files.ui  pyqode_core.qrc  search_panel.ui
old/: code_edit.py  core.py
old/editors/: generic.py
old/modes/: __init__.py  cc.py  checker.py
old/panels/: __init__.py  folding.py  marker.py  misc.py  search.py
old/ui/: dlg_file_type.ui  search_panel.ui  translate_ui.py
pcef/: __init__.py  base.py  code_edit.py  constants.py  core.py  editors.py  exceptions.py  promoted_widgets.py  qplaincodeedit.py  style.py  version.py
pcef/config/: __init__.py  style.py  styles.py  svconfig.py
pcef/core/: __init__.py  constants.py  decoration.py  editor.py  exceptions.py  extension.py  highlighter.py  logger.py  mode.py  panel.py  plugins.py  properties.py  syntax_highlighter.py  system.py  textblockuserdata.py  utils.py
pcef/editors/: generic.py  python.py
pcef/modes/: __init__.py  autosave.py  cc.py  checker.py  clh.py  code_completion.py  generics.py  ident.py  indent.py  margin.py  sh.py  zoom.py
pcef/old/: __init__.py  code_edit.py  core.py  style.py  styled_object.py
pcef/panels/: bookmark.py  folding.py  generics.py  line_numbers.py  lines.py  marker.py  misc.py  search.py  search_and_replace.py  utils.py
pcef/plugins/: __init__.py  libpcefplugin.py
pcef/python/: __init__.py
pcef/qt/: QtCore.py  QtGui.py  __init__.py  pyqt_ui.py  pyside_ui.py  ui.py
pcef/qt_designer/: __init__.py  libpcefplugin.py  pcef_plugin.py
pcef/styles/: __init__.py  darcula.py  dark.py  default.py  white.py
pcef/tools/: __init__.py  highlighter.py
pcef/ui/: __init__.py  editor.qrc  editor.ui  editor_rc.py  editor_ui.py  search_panel.ui  search_panel_ui.py  translate_ui.py
pcef/utils/: filewatcher.py  threadutils.py
pyqode/: __init__.py
pyqode/core/: __init__.py  actions.py  api.py  cache.py  client.py  code_edit.py  constants.py  decoration.py  designer_plugin.py  dialogs.py  editor.py  icons.py  logger.py  mode.py  panel.py  properties.py  server.py  settings.py  share.py  style.py  syntax_highlighter.py  system.py  text.py  textblockuserdata.py  utils.py  workers.py
pyqode/qt/: QtCore.py  QtDesigner.py  QtGui.py  QtNetwork.py  QtTest.py  QtWidgets.py  __init__.py  pyqt_ui.py  pyside_ui.py  ui.py
pyqode_designer/: __init__.py  designer.py
scripts/: install-pyqode.sh  install-qt.py  makeppa.sh
scripts/git-hooks/: post-commit
test/: __init__.py  helpers.py  server.py  test_actions.py  test_api.py  test_cache.py  test_functional.py  test_integration.py  test_qactions.py  test_settings.py  test_style.py  test_text_api.py
test/files/: big5hkscs.txt  foo.py
test/frontend/: test_decoration.py  test_extension.py  test_text.py
test/test_api/: test_client.py  test_code_edit.py  test_decoration.py  test_encodings.py  test_folding.py  (+3 more)
tools/: copydebfiles.py
(+387 files in other folders)
